applications/homer/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homer
  labels:
    app.kubernetes.io/instance: homer
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: homer
    app.kubernetes.io/version: v24.05.1
spec:
  replicas: 1
  revisionHistoryLimit: 3
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app.kubernetes.io/name: homer
      app.kubernetes.io/instance: homer
  template:
    metadata:
      labels:
        app.kubernetes.io/name: homer
        app.kubernetes.io/instance: homer
    spec:
      containers:
        - name: homer
          image: ghcr.io/bastienwirtz/homer:v24.05.1
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          volumeMounts:
            - name: homer-config
              mountPath: /www/assets
              readOnly: true
            - name: homer-icons
              mountPath: /www/assets/icons
              readOnly: true
            - name: homer-icons-2
              mountPath: /www/assets/icons-2
              readOnly: true
            - name: homer-icons-3
              mountPath: /www/assets/icons-3
              readOnly: true
      volumes:
        - name: homer-config
          configMap:
            name: homer-config
        - name: homer-icons
          configMap:
            name: homer-icons
        - name: homer-icons-2
          configMap:
            name: homer-icons-2
        - name: homer-icons-3
          configMap:
            name: homer-icons-3
