applications/homer/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homer
  labels:
    app.kubernetes.io/service: homer
    app.kubernetes.io/instance: homer
    app.kubernetes.io/name: homer
    app.kubernetes.io/version: v24.05.1
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/instance: homer
    app.kubernetes.io/name: homer
