applications/homer/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homer
  annotations:
    spec.ingressClassName: traefik
    cert-manager.io/cluster-issuer: letsencrypt
    traefik.ingress.kubernetes.io/router.middlewares: homer-homer-http-https-middleware@kubernetescrd
spec:
  tls:
    - hosts:
        - homer.tryrocket.cloud
        - tryrocket.cloud
      secretName: tryrocket-cloud-tls
  rules:
    - host: homer.tryrocket.cloud
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: homer
                port:
                  name: http

    - host: tryrocket.cloud
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: homer
              port:
                name: http
